--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -21,13 +21,39 @@ jobs:
       - name: Install dependencies
         run: composer install --no-dev --optimize-autoloader
 
-      - name: Deploy via SSH
+      - name: Deploy
         uses: appleboy/ssh-action@v0.1.4
         with:
-          host: ${{ secrets.SERVER_HOST }}
-          username: ${{ secrets.SERVER_USER }}
-          key: ${{ secrets.SERVER_SSH_KEY }}
           script: |
-            cd /home/c/${{ secrets.SERVER_USER }}/public_html
-            git pull origin main
+            cd /home/c/${{ secrets.SERVER_USER }}
+            if [ -d "repo" ]; then
+              cd repo
+              git pull origin main
+            else
+              git clone https://github.com/${{ github.repository }}.git repo
+              cd repo
+            fi
+            
             composer install --no-dev
+            
+            rsync -av --delete \
+              --exclude='.git/' \
+              --exclude='.env' \
+              --exclude='.github/' \
+              ./ /home/c/${{ secrets.SERVER_USER }}/public_html/
+
+      - name: Create .env
+        uses: appleboy/ssh-action@v0.1.4
+        with:
+          script: |
+            cat > /home/c/${{ secrets.SERVER_USER }}/public_html/.env <<EOF
+            DB_HOST=${{ secrets.DB_HOST }}
+            DB_NAME=${{ secrets.DB_NAME }}
+            DB_USER=${{ secrets.DB_USER }}
+            DB_PASSWORD=${{ secrets.DB_PASSWORD }}
+            GOOGLE_CLIENT_ID=${{secrets.GOOGLE_CLIENT_ID}}
+            GOOGLE_CLIENT_SECRET=${{secrets.GOOGLE_CLIENT_SECRET}}
+            JWT_ACCESS_SECRET=${{secrets.JWT_ACCESS_SECRET}}
+            JWT_REFRESH_SECRET=${{secrets.JWT_REFRESH_SECRET}}
+            EOF
+            chmod 600 /home/c/${{ secrets.SERVER_USER }}/public_html/.env
