--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -24,6 +24,10 @@ jobs:
       - name: Deploy
         uses: appleboy/ssh-action@v0.1.4
         with:
+          with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USER }}
+          key: ${{ secrets.SERVER_SSH_KEY }}
           script: |
             cd /home/c/${{ secrets.SERVER_USER }}
             if [ -d "repo" ]; then
