--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -49,6 +49,9 @@ jobs:
       - name: Create .env
         uses: appleboy/ssh-action@v0.1.4
         with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USER }}
+          key: ${{ secrets.SERVER_SSH_KEY }}
           script: |
             cat > /home/c/${{ secrets.SERVER_USER }}/public_html/.env <<EOF
             DB_HOST=${{ secrets.DB_HOST }}
