--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -24,27 +24,24 @@ jobs:
       - name: Deploy
         uses: appleboy/ssh-action@v0.1.4
         with:
-          with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SERVER_SSH_KEY }}
           script: |
             cd /home/c/${{ secrets.SERVER_USER }}
-            if [ -d "repo" ]; then
-              cd repo
+            
+            if [ -d ".git" ]; then
               git pull origin main
             else
-              git clone https://github.com/${{ github.repository }}.git repo
-              cd repo
+              git clone https://github.com/${{ github.repository }}.git .
             fi
             
-            composer install --no-dev
+            composer install --no-dev --optimize-autoloader
             
-            rsync -av --delete \
-              --exclude='.git/' \
-              --exclude='.env' \
-              --exclude='.github/' \
-              ./ /home/c/${{ secrets.SERVER_USER }}/public_html/
+            # Права доступа
+            chmod 750 .
+            chmod 755 public_html
+            chmod 644 public_html/.htaccess
 
       - name: Create .env
         uses: appleboy/ssh-action@v0.1.4
@@ -53,7 +50,7 @@ jobs:
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SERVER_SSH_KEY }}
           script: |
-            cat > /home/c/${{ secrets.SERVER_USER }}/public_html/.env <<EOF
+            cat > /home/c/${{ secrets.SERVER_USER }}/.env <<EOF
             DB_HOST=${{ secrets.DB_HOST }}
             DB_NAME=${{ secrets.DB_NAME }}
             DB_USER=${{ secrets.DB_USER }}
@@ -63,4 +60,4 @@ jobs:
             JWT_ACCESS_SECRET=${{secrets.JWT_ACCESS_SECRET}}
             JWT_REFRESH_SECRET=${{secrets.JWT_REFRESH_SECRET}}
             EOF
-            chmod 600 /home/c/${{ secrets.SERVER_USER }}/public_html/.env
+            chmod 600 /home/c/${{ secrets.SERVER_USER }}/.env
