--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -8,20 +8,13 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Test SSH connection
-        uses: appleboy/ssh-action@v0.1.4
-        with:
-          host: ${{ secrets.SERVER_HOST }}
-          username: ${{ secrets.SERVER_USER }}
-          key: ${{ secrets.SERVER_SSH_KEY }}
-          script: echo "Connection successful!"
       - name: Checkout code
         uses: actions/checkout@v3
 
       - name: Install dependencies
         run: composer install --no-dev --optimize-autoloader
 
-      - name: Deploy
+      - name: Deploy via SSH
         uses: appleboy/ssh-action@v0.1.4
         with:
           host: ${{ secrets.SERVER_HOST }}
@@ -30,15 +23,22 @@ jobs:
           script: |
             cd /home/c/${{ secrets.SERVER_USER }}
             
-            if [ -d ".git" ]; then
-              git pull origin main
-            else
-              git clone https://github.com/${{ github.repository }}.git .
-            fi
+            mkdir -p temp_deploy
+            rsync -av --delete $GITHUB_WORKSPACE/ temp_deploy/
+            
+            mkdir -p public_html
+            rsync -av --delete temp_deploy/public/ public_html/
+            
+            find temp_deploy -mindepth 1 -maxdepth 1 -not -name public -exec cp -r {} . \;
+            
+            rm -rf temp_deploy
+            
+            find . -type d -exec chmod 755 {} \;
+            find . -type f -exec chmod 644 {} \;
+            chmod -R 755 public_html
+            chmod 600 .env
             
             composer install --no-dev --optimize-autoloader
-            
-            chmod 755 public_html
 
       - name: Create .env
         uses: appleboy/ssh-action@v0.1.4
