--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -14,31 +14,59 @@ jobs:
       - name: Install dependencies
         run: composer install --no-dev --optimize-autoloader
 
+      - name: Create deployment archive
+        run: |
+          # Исключаем ненужные файлы
+          tar -czf deploy.tar.gz \
+            --exclude='.git' \
+            --exclude='.github' \
+            --exclude='deploy.tar.gz' \
+            .
+          
       - name: Deploy via SSH
         uses: appleboy/ssh-action@v0.1.4
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SERVER_SSH_KEY }}
+          script_timeout: 10m
           script: |
+            echo "=== Starting deployment ==="
             cd /home/c/${{ secrets.SERVER_USER }}
             
+            rm -f deploy.tar.gz
+            
+            start_time=$(date +%s)
+            
             mkdir -p temp_deploy
-            rsync -av --delete $GITHUB_WORKSPACE/ temp_deploy/
+            echo "Directory created"
             
+            echo "Copying archive..."
+            scp -o StrictHostKeyChecking=no ${{ github.workspace }}/deploy.tar.gz .
+            
+            echo "Extracting files..."
+            tar -xzf deploy.tar.gz -C temp_deploy
+            
+            echo "Moving public files..."
             mkdir -p public_html
-            rsync -av --delete temp_deploy/public/ public_html/
+            rsync -a --delete temp_deploy/public/ public_html/
             
+            echo "Copying other files..."
             find temp_deploy -mindepth 1 -maxdepth 1 -not -name public -exec cp -r {} . \;
             
-            rm -rf temp_deploy
+            echo "Cleaning up..."
+            rm -rf temp_deploy deploy.tar.gz
             
+            echo "Setting permissions..."
             find . -type d -exec chmod 755 {} \;
             find . -type f -exec chmod 644 {} \;
             chmod -R 755 public_html
-            chmod 600 .env
             
-            composer install --no-dev --optimize-autoloader
+            echo "Deployment complete!"
+            
+            end_time=$(date +%s)
+            echo "Deployment took $((end_time - start_time)) seconds"
+            
 
       - name: Create .env
         uses: appleboy/ssh-action@v0.1.4
