test deploy fix

--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -67,8 +67,7 @@ jobs:
             cp "$TEMP_DIR/composer.json" "$DEPLOY_ROOT/"
             cp "$TEMP_DIR/composer.lock" "$DEPLOY_ROOT/"
 
-            chmod 755 $DEPLOY_ROOT
-            chmod 755 $DEPLOY_ROOT/vendor
+            chmod -R 755 $DEPLOY_ROOT
             
             rm -rf "$TEMP_DIR" "$DEPLOY_DIR/deploy.tar.gz"
 
