--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -1,4 +1,4 @@
-name: Deploy to Hosting
+name: Deploy API
 
 on:
   push:
@@ -14,19 +14,15 @@ jobs:
       - name: Install dependencies
         run: |
           composer install --no-dev --optimize-autoloader
-          sync
 
-      - name: Create deployment archive
+      - name: Prepare files
         run: |
-          tar -czf deploy.tar.gz \
-            core/ \
-            includes/ \
-            public/ \
-            vendor/ \
-            composer.json \
-            composer.lock \
-
-          ls -lh deploy.tar.gz
+          mkdir -p deploy/public_html
+          cp -r vendor/ app/ core/ includes/ deploy/public_html/
+          cp composer.* deploy/public_html/
+          cp index.php .htaccess deploy/public_html/
+          
+          tar -czf deploy.tar.gz -C deploy .
 
       - name: Upload archive to server
         uses: appleboy/scp-action@v0.1.3
@@ -38,38 +34,25 @@ jobs:
           target: "/home/c/${{ secrets.SERVER_USER }}/deploy/"
           rm: false
 
-      - name: Extract and deploy
+      - name: Extract and protect
         uses: appleboy/ssh-action@v0.1.4
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SERVER_SSH_KEY }}
           script: |
-            DEPLOY_ROOT="/home/c/${{ secrets.SERVER_USER }}"
-            DEPLOY_DIR="$DEPLOY_ROOT/deploy"
+            DEPLOY_ROOT="/home/c/${{ secrets.SERVER_USER }}/public_html"
             
-            if [ ! -f "$DEPLOY_DIR/deploy.tar.gz" ]; then
-              echo "Error: Archive not found!"
-              exit 1
-            fi
+            tar -xzf "$DEPLOY_ROOT/deploy/deploy.tar.gz" -C "$DEPLOY_ROOT"
             
-            TEMP_DIR="$DEPLOY_DIR/temp_$(date +%s)"
-            mkdir -p "$TEMP_DIR"
+            find "$DEPLOY_ROOT" -type d -exec chmod 755 {} \;
+            chmod -R 750 "$DEPLOY_ROOT/app" "$DEPLOY_ROOT/core" "$DEPLOY_ROOT/includes"
             
-            tar -xzf "$DEPLOY_DIR/deploy.tar.gz" -C "$TEMP_DIR"
+            # .htaccess защищает файлы
+            chmod 644 "$DEPLOY_ROOT/.htaccess"
             
-            mkdir -p "$DEPLOY_ROOT/public_html"
-            rsync -a --delete "$TEMP_DIR/public/" "$DEPLOY_ROOT/public_html/"
-
-            rsync -a "$TEMP_DIR/core/" "$DEPLOY_ROOT/core/"
-            rsync -a "$TEMP_DIR/includes/" "$DEPLOY_ROOT/includes/"
-            rsync -a "$TEMP_DIR/vendor/" "$DEPLOY_ROOT/vendor/"
-            cp "$TEMP_DIR/composer.json" "$DEPLOY_ROOT/"
-            cp "$TEMP_DIR/composer.lock" "$DEPLOY_ROOT/"
-
-            chmod -R 755 $DEPLOY_ROOT
-            
-            rm -rf "$TEMP_DIR" "$DEPLOY_DIR/deploy.tar.gz"
+            # Удаляем архив
+            rm -rf "$DEPLOY_ROOT/deploy"
 
       - name: Create .env
         uses: appleboy/ssh-action@v0.1.4
@@ -78,8 +61,8 @@ jobs:
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SERVER_SSH_KEY }}
           script: |
-            DEPLOY_DIR="/home/c/${{ secrets.SERVER_USER }}"
-            cat > "$DEPLOY_DIR/.env" <<EOF
+            DEPLOY_ROOT="/home/c/${{ secrets.SERVER_USER }}/public_html"
+            cat > "$DEPLOY_ROOT/.env" <<EOF
             DB_HOST=${{ secrets.DB_HOST }}
             DB_NAME=${{ secrets.DB_NAME }}
             DB_USER=${{ secrets.DB_USER }}
@@ -89,4 +72,4 @@ jobs:
             JWT_ACCESS_SECRET=${{secrets.JWT_ACCESS_SECRET}}
             JWT_REFRESH_SECRET=${{secrets.JWT_REFRESH_SECRET}}
             EOF
-            chmod 600 "$DEPLOY_DIR/.env"
+            chmod 600 "$DEPLOY_ROOT/.env"
