--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,11 @@
     },
     "config": {
         "sort-packages": true
+    },
+    "autoload": {
+        "psr-4": {
+            "App\\": "app/",
+            "Core\\": "core/"
+        }
     }
 }
