--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/",
-            "Core\\": "core/"
+            "app\\": "app/",
+            "core\\": "core/"
         }
     }
 }
