try to fix htaccess

--- a/.htaccess
+++ b/.htaccess
@@ -1,13 +1,21 @@
 DirectoryIndex index.php
-Options -Indexes
+Options -Indexes -ExecCGI -Includes
 
-# Включение rewrite
-RewriteEngine On
-RewriteBase /
+<IfModule mod_rewrite.c>
+    RewriteEngine On
+    RewriteBase /
 
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*)$ index.php [QSA,L]
+    RewriteRule ^vendor(/|$) - [F,L,NC]
+    RewriteRule ^app(/|$) - [F,L,NC]
+    RewriteRule ^core(/|$) - [F,L,NC]
+    RewriteRule ^includes(/|$) - [F,L,NC]
+
+    RewriteRule \.(env|json|lock|md|gitignore|bak)$ - [F,L,NC]
+
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteCond %{REQUEST_FILENAME} !-d
+    RewriteRule ^ index.php [L]
+</IfModule>
 
 <FilesMatch "\.(env|json|lock)$">
     Require all denied
